[package]
name = "jupiter-client"
version = "1.0.0"
edition = "2024"
description = "A type-safe, asynchronous Rust client for the Jupiter Aggregator API on Solana. Facilitates seamless token swaps, route finding, and quote generation."
license = "MIT"
repository = "https://github.com/86maid/jupiter-client"                                                                                                                # 推荐填写仓库地址
keywords = ["solana", "jupiter", "dex", "crypto", "swap"]                                                                                                              # 添加关键词有助于搜索
categories = ["cryptography::cryptocurrencies", "api-bindings", "asynchronous"]

[dependencies]
rust_decimal = "1"
anyhow = "1"
serde = "1"
serde_json = "1"
solana-sdk = "2.1.7"
solana-account-decoder = "2.1.7"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json", "query"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
